[Fix][Connector-V2] Replace List.of() with Collections.singletonList() for Java 8 compatibility in IcebergSinkWriterTest
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>